deployments/gitpod/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitpod
spec:
  hosts:
    - gitpod.dev.erpf.de
    - "*.gitpod.dev.erpf.de"
    - "*.ws.gitpod.dev.erpf.de"
  gateways:
    - gitpod
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 80
          host: proxy
